Bug 20691. Fire OnStopRequest() on a callback so as to avoid re-entrancy problems. r=mscott, a=chofmann